--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -24,11 +24,35 @@ a{
   .top-sticky-blue{
     padding: 0.75rem 16rem;
     background-color: rgb(30 58 138);
-    color: white;
+    color: rgb(202, 13, 13);
     font-size: 1rem;
     font-weight: 800;
     text-align: left;
   }
+  .top-sticky-blue-test {
+    padding: 0.75rem 16rem;
+    background-color: rgb(255, 255, 255);
+    color: white;
+    height: 80px;
+    font-size: 1rem;
+    font-weight: 800;
+    text-align: left;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+    box-shadow: 0px 3px 0px 0px rgba(0, 0, 0, 0.28);
+}
+@media (max-width: 767px) { /* Adjust the max-width value as needed */
+  .top-sticky-blue-test {
+    padding: 0.75rem 1rem; /* Adjust the padding as needed */
+    justify-content: center; /* Align content to the left */
+  }
+}
+
+
+ 
+
   
   .main-container{
     max-width: 48rem;
