my final changes

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -120,6 +120,14 @@ a{
     padding: 1rem 0;
     color: #1f2937;
   }
+  
+  .main-des-title-6-test{
+    font-size: 2rem;
+    line-height: 2.5rem;
+    // font-weight: 600;
+    padding: 1rem 0;
+    color: #1f2937;
+  }
 
   .main-des-title-smaller{
     font-size: 2rem;
@@ -237,7 +245,7 @@ a{
 
   .ok{
     color: white;
-    cursor: pointer;
+      cursor: pointer;
     align-items: center;
     border-radius: 50px;
     width: 100%;
