--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -122,7 +122,7 @@ a{
   }
   
   .main-des-title-6-test{
-    font-size: 1.8rem;
+    font-size: 1.4rem;
     line-height: 2.5rem;
     // font-weight: 600;
     padding: 1rem 0;
@@ -264,6 +264,25 @@ a{
     line-height: 30px;
     margin: auto;
     padding: 14px 36px 14px 14px;
+  
+  }
+
+  .ok-test{
+    color: white;
+      cursor: pointer;
+    align-items: center;
+    border-radius: 50px;
+   height: 80px;
+   width: 290px;
+    background-color: rgb(18, 112, 255);
+    display: flex;
+    flex-direction: row;
+    font-size: 30px;
+    font-weight: 500;
+    justify-content: center;
+    line-height: 30px;
+    margin: auto;
+    // padding: 34px 36px 14px 14px;
   
   }
   
