--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -122,10 +122,11 @@ a{
   }
   
   .main-des-title-6-test{
-    font-size: 1.4rem;
-    line-height: 2.5rem;
-    // font-weight: 600;
-    padding: 1rem 0;
+    font-size: 1.9rem;
+    line-height: 50px;
+    // font-weight: 700;
+    // padding: 1rem 0;
+    line-height: 1.3;
     color: #1f2937;
   }
 
