--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -124,6 +124,7 @@ a{
   .main-des-title-6-test{
     font-size: 1.9rem;
     line-height: 50px;
+    margin-top: 5px;
     // font-weight: 700;
     // padding: 1rem 0;
     line-height: 1.3;
@@ -153,6 +154,7 @@ a{
   }
 
   .main-des-5{
+    
     font-size: 1.5rem;
     line-height: 2rem;
     margin: 1rem 0;
