--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -31,7 +31,7 @@ a{
   }
   .top-sticky-blue-test {
     padding: 0.75rem 16rem;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(30 58 138);
     color: white;
     height: 80px;
     font-size: 1rem;
