--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -40,7 +40,7 @@ a{
 }
 @media (max-width: 768px) {
   .top-sticky-blue-test2 {
-    text-align: center; /* Center-align the text */
+    text-align: left; /* Center-align the text */
     padding: 0.75rem 1rem; /* Adjust padding for smaller screens */
   }
 }
@@ -132,6 +132,13 @@ a{
 
   .main-des-title-6{
     font-size: 2rem;
+    line-height: 2.5rem;
+    font-weight: 600;
+    padding: 1rem 0;
+    color: #1f2937;
+  }
+  .main-des-title-6-2{
+    font-size: 2.2rem;
     line-height: 2.5rem;
     font-weight: 600;
     padding: 1rem 0;
