--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -2,7 +2,15 @@ a{
     text-decoration: none;
     color: inherit;
   }
-  
+  /* styles.scss */
+.center-loader {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+ 
+}
+
   .top-sticky{
     padding: 0.75rem;
     background-color: rgb(220 38 38);
