--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -29,6 +29,7 @@ a{
   //   font-weight: 700;
   // }
 
+
   .top-sticky-blue{
     padding: 0.75rem 16rem;
     background-color: rgb(30 58 138);
@@ -36,6 +37,23 @@ a{
     font-size: 1rem;
     font-weight: 800;
     text-align: left;
+  }
+
+  .top-sticky-blue-xy{
+    padding: 0.75rem 16rem;
+    background-color: rgb(30 58 138);
+    color: white;
+    font-size: 1rem;
+    font-weight: 800;
+    text-align: left;
+  }
+
+
+  @media (max-width: 768px) {
+    .top-sticky-blue-xy {
+      text-align: left; /* Center-align the text */
+      padding: 0.75rem 1rem; /* Adjust padding for smaller screens */
+    }
   }
   .top-sticky-blue-test2 {
     padding: 0.75rem 16rem;
