--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -193,7 +193,13 @@ a{
     color: #1f2937;
     margin-top: -14px;
   }
-  
+  @media (max-width: 768px) { /* Adjust the breakpoint as needed */
+    .main-des-title-60a {
+    // margin-top: -0.1rem;
+      font-size: 1.5rem; /* Reduce the font size for smaller screens */
+      line-height: 1.2; /* Adjust the line height as needed */
+    }
+  }
   @media (max-width: 768px) { /* Adjust the breakpoint as needed */
     .main-des-title-6-7 {
     // margin-top: -0.1rem;
