--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -717,3 +717,20 @@ a{
       line-height: 1.25rem;
     }
   }
+
+  @keyframes glow {
+    0% {
+        box-shadow: 0 0 5px #34C759, 0 0 10px #34C759;
+    }
+    50% {
+        box-shadow: 0 0 10px #34C759, 0 0 20px #34C759;
+    }
+    100% {
+        box-shadow: 0 0 5px #34C759, 0 0 10px #34C759;
+    }
+}
+
+.call-btn {
+    animation: glow 1.5s infinite alternate;
+    /* your existing styles for call-btn */
+}
