--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -66,7 +66,7 @@ a{
 }
 @media (max-width: 768px) {
   .top-sticky-blue-test2 {
-    text-align: left; /* Center-align the text */
+    text-align: center; /* Center-align the text */
     padding: 0.75rem 1rem; /* Adjust padding for smaller screens */
   }
 }
