--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -59,15 +59,15 @@ a{
     padding: 0.75rem 16rem;
     background-color: rgb(30 58 138);
     color: rgb(255, 255, 255);
-    font-size: 1rem;
+    font-size: 1.2rem;
     font-weight: 800;
     text-align: left;
 
 }
 @media (max-width: 768px) {
   .top-sticky-blue-test2 {
-    text-align: center; /* Center-align the text */
-    padding: 0.75rem 1rem; /* Adjust padding for smaller screens */
+    text-align: left; /* Center-align the text */
+    padding: 1.25rem 1rem; /* Adjust padding for smaller screens */
   }
 }
   
