--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -414,7 +414,28 @@ a{
     margin-right: auto;
     justify-content: center;
   }
-  
+  .footer3{
+    // row-gap: 1rem;
+    background-color: #e1e8f0;
+    margin-top: 44rem;
+    padding: 1rem;
+    color: #4f4f4f;
+    // max-width: 48rem;
+    column-gap: 1rem;
+    font-size: 16px;
+    line-height: 2.25rem;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .terms3{
+    gap: 4rem;
+    margin-bottom: 0.5rem;
+    color: #4f4f4f ;
+    text-decoration: none;
+    }
   .terms2{
     gap: 1rem;
     margin-bottom: 0.5rem;
